--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
   <!-- HEADER AND NAV -->
   <header class="flex column">
     <h1>Useful ✨</h1>
-    <nav class="flex center">
-      <a href="#nav1">général</a>
-      <a href="#nav2">html</a>
-      <a href="#nav3">css</a>
-      <a href="#nav4">design</a>
-      <a href="#nav5">bonus</a>
-    </nav>
   </header>
+
+  <nav class="flex center">
+    <a href="#nav1">général</a>
+    <a href="#nav2">html</a>
+    <a href="#nav3">css</a>
+    <a href="#nav4">design</a>
+    <a href="#nav5">bonus</a>
+  </nav>
 
   <!-- MAIN CONTENT -->
   <main class="flex column center">
@@ -32,7 +33,7 @@
       <article></article>
       <article></article>
     </section>
-    <section id="nav2">
+    <section id="nav2" class="flex column center">
       <h3>html</h3>
       <article></article>
       <article></article>
@@ -40,7 +41,7 @@
       <article></article>
       <article></article>
     </section>
-    <section id="nav3">
+    <section id="nav3" class="flex column center">
       <h3>css</h3>
       <article></article>
       <article></article>
@@ -48,7 +49,7 @@
       <article></article>
       <article></article>
     </section>
-    <section id="nav4">
+    <section id="nav4" class="flex column center">
       <h3>design</h3>
       <article></article>
       <article></article>
@@ -56,7 +57,7 @@
       <article></article>
       <article></article>
     </section>
-    <section id="nav5">
+    <section id="nav5" class="flex column center">
       <h3>bonus</h3>
       <article></article>
       <article></article>
