--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <base target="_blank">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
   <title>Useful</title>
@@ -28,37 +27,37 @@
   <main class="flex column center">
     <section id="nav1" class="flex column center">
       <h3>général</h3>
-      <article><a href="https://developer.mozilla.org/">La bible : MDN (Wikipédia du code !)</a></article>
+      <article><a target="_blank" href="https://developer.mozilla.org/">La bible : MDN (Wikipédia du code !)</a></article>
     </section>
     <section id="nav2" class="flex column center">
       <h3>html</h3>
-      <article><a href="https://www.htmhell.dev/">HTML Hell : exemples d'erreurs avec des corrections</a></article>
+      <article><a target="_blank" href="https://www.htmhell.dev/">HTML Hell : exemples d'erreurs avec des corrections</a></article>
     </section>
     <section id="nav3" class="flex column center">
       <h3>css</h3>
-      <article><a href="https://css-tricks.com/">La bible : CSS-tricks ! Des guides complets et de super articles</a></article>
-      <article><a href="https://twitter.com/NinaGorlanova/status/1232724001446866945">Margin / Padding : explication simple</a></article>
-      <article><a href="https://www.pierre-giraud.com/liste-selecteurs-css-utilisation/">Sélecteurs : le guide complet</a></article>
-      <article><a href="https://flukeout.github.io/">Sélecteurs : le jeu des bento</a></article>
-      <article><a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Flexbox : le guide complet</a></article>
-      <article><a href="https://flexboxfroggy.com/">Flexbox : le jeu des grenouilles</a></article>
-      <article><a href="http://www.flexboxdefense.com/">Flexbox : le jeu de défense</a></article>
-      <article><a href="https://css-tricks.com/snippets/css/complete-guide-grid/">Grid : le guide complet</a></article>
-      <article><a href="http://cssgridgarden.com/#fr">Grid : le jeu du jardin</a></article>
+      <article><a target="_blank" href="https://css-tricks.com/">La bible : CSS-tricks ! Des guides complets et de super articles</a></article>
+      <article><a target="_blank" href="https://twitter.com/NinaGorlanova/status/1232724001446866945">Margin / Padding : explication simple</a></article>
+      <article><a target="_blank" href="https://www.pierre-giraud.com/liste-selecteurs-css-utilisation/">Sélecteurs : le guide complet</a></article>
+      <article><a target="_blank" href="https://flukeout.github.io/">Sélecteurs : le jeu des bento</a></article>
+      <article><a target="_blank" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Flexbox : le guide complet</a></article>
+      <article><a target="_blank" href="https://flexboxfroggy.com/">Flexbox : le jeu des grenouilles</a></article>
+      <article><a target="_blank" href="http://www.flexboxdefense.com/">Flexbox : le jeu de défense</a></article>
+      <article><a target="_blank" href="https://css-tricks.com/snippets/css/complete-guide-grid/">Grid : le guide complet</a></article>
+      <article><a target="_blank" href="http://cssgridgarden.com/#fr">Grid : le jeu du jardin</a></article>
     </section>
     <section id="nav4" class="flex column center">
       <h3>design</h3>
-      <article><a href="https://colourco.de/">Couleurs : construire une palette simple</a></article>
-      <article><a href="https://htmlcolorcodes.com/color-names/">Couleurs : les noms des couleurs de base</a></article>
-      <article><a href="https://refactoringui.com/previews/building-your-color-palette/">Couleurs : le guide pour construire une bonne palette</a></article>
-      <article><a href="https://uigradients.com/#MoonlitAsteroid">Dégradés CSS</a></article>
-      <article><a href="https://cssgenerator.org/">Effets : générateur d'effets CSS (ombres, bordures, dégradés...)</a></article>
-      <article><a href="https://animate.style/">Animations : collection d'animations simples</a></article>
-      <article><a href="https://undraw.co/illustrations">Images : banque d'illustrations libres et jolies !</a></article>
+      <article><a target="_blank" href="https://colourco.de/">Couleurs : construire une palette simple</a></article>
+      <article><a target="_blank" href="https://htmlcolorcodes.com/color-names/">Couleurs : les noms des couleurs de base</a></article>
+      <article><a target="_blank" href="https://refactoringui.com/previews/building-your-color-palette/">Couleurs : le guide pour construire une bonne palette</a></article>
+      <article><a target="_blank" href="https://uigradients.com/#MoonlitAsteroid">Dégradés CSS</a></article>
+      <article><a target="_blank" href="https://cssgenerator.org/">Effets : générateur d'effets CSS (ombres, bordures, dégradés...)</a></article>
+      <article><a target="_blank" href="https://animate.style/">Animations : collection d'animations simples</a></article>
+      <article><a target="_blank" href="https://undraw.co/illustrations">Images : banque d'illustrations libres et jolies !</a></article>
     </section>
     <section id="nav5" class="flex column center">
       <h3>bonus</h3>
-      <article><a href="https://userinyerface.com">Interface utilisateur : le jeu pour apprendre les pires erreurs</a></article>
+      <article><a target="_blank" href="https://userinyerface.com">Interface utilisateur : le jeu pour apprendre les pires erreurs</a></article>
     </section>
   </main>
 
