add html reference

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </section>
     <section id="nav2" class="flex column center">
       <h3>html</h3>
+      <article><a target="_blank" href="https://htmlreference.io/">HTML : le guide des éléments et attributs</a></article>
       <article><a target="_blank" href="https://www.htmhell.dev/">HTML Hell : exemples d'erreurs avec des corrections</a></article>
     </section>
     <section id="nav3" class="flex column center">
