--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <section id="nav1" class="flex column center">
       <h3>général</h3>
       <article><a target="_blank" href="https://developer.mozilla.org/">La bible : MDN (Wikipédia du code !)</a></article>
+      <article><a target="_blank" href="https://docs.emmet.io/cheat-sheet/">Emmet : les raccourcis VS Code</a></article>
     </section>
     <section id="nav2" class="flex column center">
       <h3>html</h3>
